# mpc_car

mpc/devel/: .catkin  .rosinstall  local_setup.sh
mpc/devel/lib/mpc_tracker/: mpc_controller_neu  mpc_geo_try  mpc_tracker
mpc/devel/lib/pkgconfig/: mpc_tracker.pc
mpc/devel/share/mpc_tracker/cmake/: mpc_trackerConfig.cmake
mpc/src/mpc_tracker/: CMakeLists.txt  rviz.rviz
mpc/src/mpc_tracker/include/mpc_tracker/: mpc_tracker.hpp  mpc_tracker——old.hpp
mpc/src/mpc_tracker/src/: geo_try.cpp  motion_cap.cpp  mpc_controller_neu.cpp  mpc_controller_sim.cpp
yunjing/: run.sh  yunjing.sh
yunjing/back_end/: CMakeLists.txt  package.xml
yunjing/back_end/config/: global_planning.yaml
yunjing/back_end/include/back_end/: gcopter 0606不知道改了啥.hpp  gcopter ╜╗╜╙╡π┐╔▒Σ░µ.hpp  gcopter 包含角加速度约束.hpp  gcopter 包含角加速度约束均匀采样    log梯度.hpp  gcopter 多段分别优化 无用版.hpp  gcopter 本来想学汪博 好像不适用.hpp  gcopter 汪博走廊稳定版本.hpp  gcopter 稳定版 几十毫秒.hpp  gcopter 角速度约束.hpp  gcopter.hpp
yunjing/back_end/include/gcopter/: firi.hpp  geo_utils.hpp  minco copy.hpp  minco.hpp  sfc_gen.hpp  trajectory.hpp
yunjing/back_end/src/: back_end.cpp
yunjing/devel/: .catkin  setup.sh
yunjing/devel/include/tracer_msgs/: TracerLightCmd.h  TracerLightState.h  TracerMotorState.h  TracerStatus.h  UartTracerMotorState.h  UartTracerStatus.h
yunjing/devel/lib/ekf/: ekf  imu_add_noise
yunjing/devel/lib/pkgconfig/: ekf.pc  tracer_base.pc  tracer_bringup.pc  tracer_description.pc  tracer_gazebo_sim.pc  tracer_msgs.pc  ugv_sdk.pc  vrpn_client_ros.pc
yunjing/devel/lib/tracer_base/: tracer_base_node  tracer_base_sim_node
yunjing/devel/lib/tracer_gazebo_sim/: tracer_skid_steer_controller
yunjing/devel/lib/vrpn_client_ros/: vrpn_client_node  vrpn_tracker_node
yunjing/front_end/: CMakeLists.txt  package.xml
yunjing/front_end/config/: kinoastar.yaml
yunjing/front_end/include/front_end/: kino_astar.h  kino_astar_myself.h  traj_representation.h
yunjing/front_end/src/: kino_astar.cpp  kino_astar_myself.cpp
yunjing/model_gazebo/: CMakeLists.txt  package.xml
yunjing/model_gazebo/config/: model_config.yaml
yunjing/model_gazebo/include/model_gazebo/: world2oct.h
yunjing/model_gazebo/launch/: octomap.launch
yunjing/model_gazebo/rviz/: octomap.rviz  urdf.rviz
yunjing/model_gazebo/src/: msg_exam.cpp  world2oct.cpp
yunjing/model_gazebo/urdf/: yunjing_robot.urdf  yunjing_robot_small.urdf
yunjing/model_gazebo/urdf/unit_box/: model copy.sdf  model.sdf
yunjing/model_gazebo/urdf/unit_box_small/: model.config  model.sdf
yunjing/model_gazebo/world/: one_box.world  ppt2.world  ppt3.world  simple_convex_world.world  simplest.world  yunjing_world.world
yunjing/novok_mocap_ros-master/vrpn_client_ros/src/: vrpn_client_ros.cpp
yunjing/plan_manager/: CMakeLists.txt  package.xml
yunjing/plan_manager/config/: car.yaml
yunjing/plan_manager/include/plan_manager/: plan_manager.hpp
yunjing/plan_manager/include/visualizer/: visualizer.hpp
yunjing/plan_manager/launch/: global_planning.launch
yunjing/plan_manager/src/: Open_loop_detection.cpp  global_planning.cpp
yunjing/src/novok_mocap_ros-master/: run.sh
(+13 files in other folders)
